# psypose

./: .gitignore  .gitmodules  LICENSE  MANIFEST.in  README.md  __init__.py  annotest.py  data.py  display.py  extract.py  face_dev.ipynb  face_identification.py  load_pose.py  pose_dev.ipynb  pose_estimation.py  regressors.py  requirements.txt  setup.cfg  setup.py  utils.py
models/: facenet_keras.py
psypose/: data.py  extract.py  pose_estimation.py  prepare_data.sh  utils.py
psypose/MEVA/data/__MACOSX/meva_data/: ._J_regressor_extra.npy  ._J_regressor_h36m.npy  ._SMPL_NEUTRAL.pkl  ._model_1000.p  ._smpl_mean_params.npz
psypose/MEVA/meva/dataloaders/: inference.py
psypose/models/: deepface.py  facenet_keras.py
src/psypose/: __init__.py  augment.py  data.py  display.py  extract.py  face_identification.py  features.py  pose_estimation.py  pose_estimation_with_pyfeat.py  prepare_data.sh  regressors.py  run_pare.py  tracking.py  utils.py
src/psypose.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/psypose/MEVA/meva/dataloaders/: data_loaders.py  dataset_2d.py  dataset_3d.py  h36m.py  inference.py  insta.py  loaders.py  movi.py  mpii3d.py  penn_action.py  posetrack.py  surreal.py  threedpw.py
src/psypose/MEVA/meva/lib/: loss_funcs.py  meva_model.py  model.py  smpl.py  spin.py  vae_recs.py  vibe_loss.py  vibe_trainer.py
src/psypose/MEVA/meva/utils/: config.py  demo_utils.py  eval_utils.py  geometry.py  renderer.py  tools.py  (+3 more)
src/psypose/models/: deepface.py  deepfashion.py  facenet_keras.py
src/psypose/pare_dl/: download_pare_models.py
(+38 files in other folders)
