[metadata]
# replace with your username:
name = psypose
version = 0.0.1
author = Landry Bulls
author_email = Landry.S.Bull@dartmouth.edu
description = Tools for processing pose information in psychological research.
long_description = file: README.md
long_description_content_type = text/markdown
url = http://github.com/scraplab/psypose
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
    Lab Homepage = http://scraplab.org/
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = psypose
packages = find:
python_requires = >=3.6

[options.packages.find]
where = psypose
